fix: fix workspace button spacing in waybar

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -28,7 +28,7 @@ tooltip {
   color: #313244;
   margin-right: 0px;
   margin-left: 2px;
-  padding-right: 2px;
+  padding-right: 3px;
   padding-left: 0px;
 }
 
